# hypermodern-python

./: .flake8  .pre-commit-config.yaml  LICENSE  mypy.ini  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
