[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Lê Minh Tú <lazidity@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/lazidity/hypermodern-python"
repository = "https://github.com/lazidity/hypermodern-python"
keywords = [ "hypermodern" ]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.32.3"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
