# pyproject.toml
[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Lê Minh Tú <lazidity@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/lazidity/hypermodern-python"
repository = "https://github.com/lazidity/hypermodern-python"
keywords = [ "hypermodern" ]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.32.3"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
coverage = {extras = ["toml"], version = "^7.6.0"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "hypermodern_python" ]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
